--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
                 <form>
                     <p>Filter Search</p>
                     <ul class="list-group">
-
+                        <li class="list-group-item">
+                            <label for="date">Enter Date</label>
+                            <input type="text" placeholder="1/10/2020" id="datetime" />
+                        </li>
+                        <li class="list-group-item">
+                            <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                        </li>
                     </ul>
-                    <li class="list-group-item">
-                        <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2020" id="datetime" />
-                    </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                    </li>
                 </form>
             </div>
             <div class="col-md-9">
@@ -67,5 +66,8 @@
             </div>
         </div>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+<script src="static/js/data.js"></script>
+<script src="static/js/app.js"></script>
 </body>
 </html>
