changes made to html code to make it look nicer.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <div class="jumbotron">
         <h1 class="display-4">The Truth Is Out There</h1>
     </div>
+    <!-- Media top -->
+    <div class="media">
+        <img src="static/images/UFO_Cloud.jpg" class="center" style="width:600px">
+    </div>
+    <br>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
